<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.widget.RecyclerView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recyclerview_steps"
        android:name="com.jacquessmuts.bakingforudacity.Fragments.RecipeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.jacquessmuts.bakingforudacity.Fragments.RecipeDetailFragment"
        tools:listitem="@layout/list_item_recipe_detail" />

</android.support.constraint.ConstraintLayout>




