...
        app:layout_constraintRight_toRightOf="parent"
        android:padding="8dp"
        android:textSize="18sp"
        tools:text="This is a long list of words that describe the contents of the steps and what you should do. There is a video above this." />

    <ImageView
        android:id="@+id/image_left"
        android:layout_width="@dimen/arrow_height"
        android:layout_height="@dimen/arrow_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_arrow_back_black_24dp"/>

    <ImageView
        android:id="@+id/image_right"
        android:layout_width="@dimen/arrow_height"
        android:layout_height="@dimen/arrow_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_arrow_forward_black_24dp"/>
    
...
